Fix languages icons avertical align

--- a/textarea-localizer.css
+++ b/textarea-localizer.css
@@ -34,6 +34,7 @@
             & img{
                 cursor: pointer;
                 width: 17px;
+                vertical-align: top;
             }
         }
     }
